--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:animated-vector-drawable:26.1.0'
+    implementation 'com.android.support:support-compat:26.1.0'
+    compile 'com.android.support:support-v4:26.1.0'
+
     implementation 'com.google.firebase:firebase-database:11.8.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
@@ -33,9 +37,14 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     compile 'fr.bmartel:jspeedtest:1.31.3'
     compile 'com.google.android.gms:play-services-location:11.8.0'
+
+
+    compile 'com.android.support:support-compat:26.1.0'
+    compile 'com.daimajia.easing:library:2.0@aar'
+    compile 'com.daimajia.androidanimations:library:2.3@aar'
+
+
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 }
-
-
-
-
 apply plugin: 'com.google.gms.google-services'
