--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,22 +15,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme2">
-
         <activity android:name=".MainActivity">
+
+        </activity>
+        <service
+            android:name=".libraries.BGService"
+            android:enabled="true" />
+
+        <activity android:name=".Settings" />
+
+
+        <activity
+            android:name=".SplashScreen"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShowLocationActivity" />
-        <activity android:name=".LocationTwo" />
-
-        <service
-            android:name=".libraries.BGService"
-            android:enabled="true" />
-
-        <activity android:name=".Settings" />
 
         <receiver
             android:name=".libraries.SensorRestarterBroadcastReceiver"
@@ -42,12 +45,11 @@
             </intent-filter>
         </receiver>
 
-        <activity
-            android:name=".Main2Activity"
-            android:label="@string/title_activity_main2"></activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
     </application>
 
 </manifest>
