--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:animated-vector-drawable:26.1.0'
     implementation 'com.android.support:support-compat:26.1.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
     compile 'com.android.support:support-v4:26.1.0'
 
     implementation 'com.google.firebase:firebase-database:11.8.0'
@@ -46,5 +47,8 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
+    compile 'com.android.volley:volley:1.1.0'
+    compile 'com.google.code.gson:gson:2.8.2'
 }
 apply plugin: 'com.google.gms.google-services'
